# mlops-pipeline-mvp

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pr-validation.yml
airflow/dags/: ml_training_pipeline.py
logs/: README.md
logs/claude-code-sessions/: 2025-06-19_week1-setup.md
src/: __init__.py
src/data/: __init__.py  data_processor.py
src/experiments/: __init__.py  mlflow_trainer.py
tests/: test_simple_classifier.py
