[tool.poetry]
name = "mlops-pipeline-mvp"
version = "0.1.0"
description = "MLOps Pipeline MVP - 4주 완성 프로젝트"
authors = ["sora"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scikit-learn = ">=1.3,<1.4"
pandas = ">=2.0,<2.1"
numpy = ">=1.24,<1.26"
mlflow = ">=2.7,<2.8"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.2"
click = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
